fix: text-overflow: ellipsis;

--- a/src/components/Sidebar/SidebarComponent.scss
+++ b/src/components/Sidebar/SidebarComponent.scss
@@ -57,41 +57,34 @@
         color: #fff;
         margin-top: 10px;
         margin-bottom: 10px;
-        
-        .conversation-date {
-          font-size: 14px;
-          color: #fff;
-          margin-top: 10px;
-          margin-bottom: 10px;
-          height: 16px;
-          font-weight: 700;
-        }
-    
-        .conversation-item {
-          padding: 8px;
-    
-          .conversation-button {
-            background-color: transparent;
-            border: none;
-            width: 100%;
-            text-align: left;
-            cursor: pointer;
-            
-            &:hover {
-              opacity: 0.8;
-            }
-            
-            .conversation-snippet {
-              margin: 0;
-              font-weight: 400;
-              font-size: 14px;
-              color: #7B7B7B;
-              display: -webkit-box;
-              -webkit-line-clamp: 1;
-              -webkit-box-orient: vertical;
-              overflow: hidden;
-              text-overflow: ellipsis;
-            }
+        height: 16px;
+        font-weight: 700;
+      }
+
+      .conversation-item {
+        padding: 8px;
+
+        .conversation-button {
+          background-color: transparent;
+          border: none;
+          width: 100%;
+          text-align: left;
+          cursor: pointer;
+
+          &:hover {
+            opacity: 0.8;
+          }
+
+          .conversation-snippet {
+            margin: 0;
+            font-weight: 400;
+            font-size: 14px;
+            color: #7b7b7b;
+            display: -webkit-box;
+            -webkit-line-clamp: 1;
+            -webkit-box-orient: vertical;
+            overflow: hidden;
+            text-overflow: ellipsis;
           }
         }
       }
